# mindspec

./: .gitignore  .golangci.yml  .goreleaser.yml  AGENTS.md  BENCH-MOVED.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GLOSSARY.md  INIT.md  LICENSE  Makefile  README.md  RELEASE-NOTES-v0.10.0.md  SECURITY.md  go.mod  go.sum  install.ps1  install.sh  manifest  mindspec.md  pyproject.toml
.agent/rules/: mindspec-modes.md
.agent/workflows/: plan-approve.md  spec-approve.md  spec-init.md  spec-status.md
.beads/: .gitignore  .migration-hint-ts  config.yaml  issues.jsonl  metadata.json  pollution-backup.jsonl
.beads/backup/: backup_state.json  config.jsonl  dependencies.jsonl  events.jsonl  issues.jsonl  labels.jsonl
.beads/formulas/: spec-lifecycle.formula.toml
.cache/go-build-test/: trim.txt
.cache/golangci-lint/: trim.txt
.claude/: settings.json
.claude/agents/: spec-orchestrator.md
.claude/commands/: llm-test.md  ms-llm-test.md  plan-approve.md  spec-approve.md
.claude/rules/: mindspec-modes.md
.claude/workflows/: ms-panel.js
.github/: pull_request_template.md
.github/workflows/: ci.yml  install-smoke.yml  (+2 more)
.mindspec/: config.yaml  context-map.md  state.json
.sast/: gosec-mindspec.json  gosec-root.json  govuln-root.json  staticcheck-root.json
architecture/: policies.yml
docs/: BACKLOG.md
docs_archive/: yegge-beads-review.md
scripts/: bd-jsonl-merge-driver.sh  bench-e2e.sh  checkout-agentmind.sh  pin-agentmind-release.sh  test-e-continuity.sh  test-install-checksum.ps1  test-install-checksum.sh  verify-agentmind-tag.sh  verify-sibling.sh
(+5978 files in other folders)
